--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 			.social-icons a {
 				display: inline-block; /* Ensures each icon is treated as a block element */
 			}
+			.resume-container {
+            text-align: center;
+            margin-top: 20px; /* Adjust the margin as needed */
+        	}
 		</style>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-2ee5Q/xj87Z81/2TZtKOTDm3bqGQQC8kFo8Ue/DJ7hvEwbJKO3THmZlJX6s0dbiF7vB1m8bF5P9t5wwLO10sz/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -60,7 +65,10 @@
 								</a>
 							</div>
 
-							
+							<!-- <p><a href="assets/OP_Resume.pdf" target="_blank" download>Download Resume (PDF)</a></p> -->
+							<div class="resume-container">
+								<a href="assets/OP_Resume.pdf" target="_blank">View Resume (PDF) <i class="fas fa-download"></i></a>
+							</div>
 							<!-- <p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p> -->
 							<!-- <a href="#porfolio" class="button large scrolly">Learn about what I do</a> -->
 						</div>
