--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/TOI.jpeg" alt="" /></a>
-								<h3><a href="#">Taste Of India Mobile App</a></h3>
+								<h3><a href="https://toihr.com/" target="_blank">Taste Of India Mobile App</a></h3>
 								<p>OBuilding Mobile application for one of the Asian Indian Festivals in Virginia providing UI to go through the products available and option to buy the product with coupon as well as card access to enroll into events. <br> <strong>Tech Stack: Flutter and TestJS</strong></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/Vsorts.jpeg" alt="" /></a>
-								<h3><a href="#">VSorts Web Application</a></h3>
+								<h3><a href="https://www.vsorts.com/" target="_blank">VSorts Web Application</a></h3>
 								<p>A web application using ReactJS for the VSortsTM for a Cultural Proficiency Continuum Dialogic Protocol. Participants are taken through a set of steps to complete a survey. Research Coordinators analyze their responses and it is sent back to the participants. <br> <strong>Tech Stack: ReactJS & Node.js</strong></p>
 							</article>
 						</div>
